--- a/RubyShift2013/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/RubyShift2013/en.lproj/MainStoryboard_iPhone.storyboard
@@ -176,22 +176,46 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="speaker.png" translatesAutoresizingMaskIntoConstraints="NO" id="km9-qi-oFy">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Knd-aO-wBG">
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Speaker Full name" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3j-vS-YQ5">
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="HfC-Jh-sih"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="speaker.png" translatesAutoresizingMaskIntoConstraints="NO" id="JTG-R1-SFd">
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="06e-PX-RMT"/>
+                                            <constraint firstAttribute="height" constant="151" id="jm3-1l-zym"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="5J5-OD-fKM"/>
-                                    <constraint firstAttribute="height" constant="151" id="DYt-Ft-AiX"/>
+                                    <constraint firstItem="o3j-vS-YQ5" firstAttribute="leading" secondItem="Knd-aO-wBG" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="BN9-Iq-rgC"/>
+                                    <constraint firstItem="o3j-vS-YQ5" firstAttribute="top" secondItem="Knd-aO-wBG" secondAttribute="top" constant="20" symbolic="YES" type="default" id="DuI-GI-HeE"/>
+                                    <constraint firstAttribute="trailing" secondItem="o3j-vS-YQ5" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="L5Y-fV-wSF"/>
+                                    <constraint firstAttribute="bottom" secondItem="JTG-R1-SFd" secondAttribute="bottom" constant="251" id="QfQ-xa-42a"/>
+                                    <constraint firstItem="JTG-R1-SFd" firstAttribute="centerX" secondItem="o3j-vS-YQ5" secondAttribute="centerX" type="default" id="deu-jd-uSt"/>
+                                    <constraint firstItem="JTG-R1-SFd" firstAttribute="top" secondItem="o3j-vS-YQ5" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="tDg-Ng-zKV"/>
+                                    <constraint firstItem="o3j-vS-YQ5" firstAttribute="centerX" secondItem="Knd-aO-wBG" secondAttribute="centerX" type="default" id="xHK-sp-0Rk"/>
                                 </constraints>
-                            </imageView>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="km9-qi-oFy" firstAttribute="leading" secondItem="6qN-sn-xTZ" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="38m-Vd-aN9"/>
-                            <constraint firstItem="km9-qi-oFy" firstAttribute="top" secondItem="6qN-sn-xTZ" secondAttribute="top" constant="20" symbolic="YES" type="default" id="XbB-J8-iWg"/>
+                            <constraint firstItem="Knd-aO-wBG" firstAttribute="trailing" secondItem="6qN-sn-xTZ" secondAttribute="trailing" type="default" id="87e-Bf-NKM"/>
+                            <constraint firstItem="Knd-aO-wBG" firstAttribute="top" secondItem="6qN-sn-xTZ" secondAttribute="top" type="default" id="Kep-hX-2b1"/>
+                            <constraint firstItem="Knd-aO-wBG" firstAttribute="bottom" secondItem="6qN-sn-xTZ" secondAttribute="bottom" type="default" id="WUb-Yv-F5Q"/>
+                            <constraint firstItem="Knd-aO-wBG" firstAttribute="leading" secondItem="6qN-sn-xTZ" secondAttribute="leading" type="default" id="XEM-HU-jgj"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="nLU-iF-jdu"/>
                     <connections>
-                        <outlet property="speakerPhoto" destination="km9-qi-oFy" id="tdM-xo-EWm"/>
+                        <outlet property="speakerFullName" destination="o3j-vS-YQ5" id="J4V-G8-REt"/>
+                        <outlet property="speakerPhoto" destination="JTG-R1-SFd" id="Eyp-TR-VEZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z88-Tb-GAr" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -274,6 +298,39 @@
         <image name="second.png" width="30" height="30"/>
         <image name="speaker.png" width="507" height="512"/>
     </resources>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="RubyShift2013SpeakerDetailsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RubyShift2013SpeakerDetailsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="speakerFullName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="speakerPhoto" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="RubyShift2013SpeakersViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RubyShift2013SpeakersViewController.h"/>
+        </class>
+        <class className="RubyShift2013StreamViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RubyShift2013StreamViewController.h"/>
+        </class>
+        <class className="RubyShift2013TalkDetailsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RubyShift2013TalkDetailsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="speakerPhoto" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="RubyShift2013TalksViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RubyShift2013TalksViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="changeDate:"/>
+            </relationships>
+        </class>
+        <class className="StreamTableViewCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StreamTableViewCell.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
